--- a/Wisnuc-iOS-Swift/Info.plist
+++ b/Wisnuc-iOS-Swift/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -29,6 +34,25 @@
 			</array>
 		</dict>
 	</array>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>mqqOpensdkSSoLogin</string>
+        <string>mqzone</string>
+        <string>sinaweibo</string>
+        <string>alipayauth</string>
+        <string>alipay</string>
+        <string>safepay</string>
+        <string>mqq</string>
+        <string>mqqapi</string>
+        <string>mqqopensdkapiV3</string>
+        <string>mqqopensdkapiV2</string>
+        <string>mqqapiwallet</string>
+        <string>mqqwpa</string>
+        <string>mqqbrowser</string>
+        <string>wtloginmqq2</string>
+        <string>weixin</string>
+        <string>wechat</string>
+    </array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
