--- a/Wisnuc-iOS-Swift/Info.plist
+++ b/Wisnuc-iOS-Swift/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIFileSharingEnabled</key>
+	<true/>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>WISNUC 需要访问您的相册</string>
 	<key>NSPhotoLibraryUsageDescription</key>
