--- a/Wisnuc-iOS-Swift/Info.plist
+++ b/Wisnuc-iOS-Swift/Info.plist
@@ -2,16 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIFileSharingEnabled</key>
-	<true/>
-	<key>LSSupportsOpeningDocumentsInPlace</key>
-	<true/>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>WISNUC 需要访问您的相册</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>WISNUC 需要访问您的相册用以备份</string>
-	<key>NSCameraUsageDescription</key>
-	<string>WISNUC 需要访问您的摄像头</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDocumentTypes</key>
@@ -87,11 +77,25 @@
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>WISNUC 需要访问您的摄像头</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>WISNUC 需要访问您的相册</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>WISNUC 需要访问您的相册用以备份</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+	</array>
+	<key>UIFileSharingEnabled</key>
+	<true/>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
