--- a/Wisnuc-iOS-Swift/Wisnuc-iOS-Swift.entitlements
+++ b/Wisnuc-iOS-Swift/Wisnuc-iOS-Swift.entitlements
@@ -10,11 +10,15 @@
 	<array>
 		<string>CloudDocuments</string>
 	</array>
+	<key>com.apple.developer.networking.networkextension</key>
+	<array/>
 	<key>com.apple.developer.ubiquity-container-identifiers</key>
 	<array>
 		<string>iCloud.$(CFBundleIdentifier)</string>
 	</array>
 	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
 	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
+	<key>com.apple.external-accessory.wireless-configuration</key>
+	<true/>
 </dict>
 </plist>
