--- a/Wisnuc-iOS-Swift/Wisnuc-iOS-Swift.entitlements
+++ b/Wisnuc-iOS-Swift/Wisnuc-iOS-Swift.entitlements
@@ -14,6 +14,8 @@
 	<true/>
 	<key>com.apple.developer.networking.networkextension</key>
 	<array/>
+	<key>com.apple.developer.networking.wifi-info</key>
+	<true/>
 	<key>com.apple.developer.ubiquity-container-identifiers</key>
 	<array>
 		<string>iCloud.$(CFBundleIdentifier)</string>
